--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/all.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="right">
+          <div class="logo">
+            <img class="star-logo" src="img/logo.png" alt="" />
+          </div>
+          <ul>
+            <li>MENU</li>
+            <li>REWARDS</li>
+            <li>GIFT CARDS</li>
+          </ul>
+        </div>
 
-    
-    
-</body>
+        <div class="left">
+          <ul>
+            <li>
+              <i
+                style="margin-right: 1rem"
+                class="fa fa-map-marker"
+                aria-hidden="true"
+              ></i
+              >find a store
+            </li>
+            <li><button>Sign in</button></li>
+            <li><button>Join now</button></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
