--- a/index.html
+++ b/index.html
@@ -32,11 +32,23 @@
               ></i
               >find a store
             </li>
-            <li><button>Sign in</button></li>
-            <li><button>Join now</button></li>
+            <li><button class="btn">Sign in</button></li>
+            <li><button class="btn">Join now</button></li>
           </ul>
         </div>
       </nav>
     </header>
+
+    <section class="pickup">
+        <div class= "card-1" >
+            <img class="mobile-img" src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-73416.jpg" alt="">
+        </div>
+
+        <div class="content">
+            <h1>Fall into an easier routine</h1>
+            <p>Get your favorites, your way—order, pay and pick up with the app.</p>
+            <button class="btn">See pickup options</button>
+        </div>
+    </section>
   </body>
 </html>
