ulility class added

--- a/index.html
+++ b/index.html
@@ -39,16 +39,69 @@
       </nav>
     </header>
 
-    <section class="pickup">
-        <div class= "card-1" >
-            <img class="mobile-img" src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-73416.jpg" alt="">
-        </div>
+    <!-- CARDS-------------------------- -->
 
-        <div class="content">
-            <h1>Fall into an easier routine</h1>
-            <p>Get your favorites, your way—order, pay and pick up with the app.</p>
-            <button class="btn">See pickup options</button>
-        </div>
+    <section class="pickup margin">
+      <div class="card-1 flex-basis">
+        <img
+          class="img-width"
+          src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-73416.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="content flex-basis">
+        <h1>Fall into an easier routine</h1>
+        <p>Get your favorites, your way—order, pay and pick up with the app.</p>
+        <button class="btn">See pickup options</button>
+      </div>
     </section>
+
+    <!-- DISCOVER------------------------------------------ -->
+
+    <section class="discover margin">
+      <div class="content">
+        <h1>COMFORT TO THE CORE</h1>
+        <p>
+          Introducing the new Apple Crisp Macchiato with notes of caramelized
+          apples, brown sugar and spiced apple drizzle. Available hot or iced.
+        </p>
+        <button class="btn">Discover your new fave</button>
+      </div>
+
+      <div class="coffee flex-basis">
+        <img
+          class="img-width"
+          src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-73205.png"
+          alt=""
+        />
+      </div>
+    </section>
+
+    <!-- ORDER-NOW-1 ---------------------------------===========-->
+
+    <section class="order-now margin flex-basis">
+      <div class="order-img flex-basis">
+        <img
+          class="img-width"
+          src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-73417.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="content flex-basis">
+        <h1>HEARTY ON THE GO</h1>
+        <p>
+          Tackle your mornings with a warm and toasty protein-packed breakfast
+          like the Bacon, Gouda & Egg Sandwich or the Double-Smoked Bacon,
+          Cheddar & Egg Sandwich.
+        </p>
+        <button class="btn">Order now</button>
+      </div>
+    </section>
+
+    <!-- ORDER-NOW-2---------------------------------------------- -->
+
+    <section class="ordernow-2"></section>
   </body>
 </html>
