--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </header>
 
     <!-- CARDS-------------------------- -->
+    <!-- PICKUP-------------------------------- -->
 
     <section class="pickup bg-pickup margin">
       <div class="card-1 flex-basis">
@@ -51,8 +52,8 @@
       </div>
 
       <div class="content content-1 flex-basis">
-        <h1>Fall into an easier routine</h1>
-        <p>Get your favorites, your way—order, pay and pick up with the app.</p>
+        <h1 class="h-margin style-h1  ">Fall into an easier routine</h1>
+        <p class="style-p" >Get your favorites, your way—order, pay and pick up with the app.</p>
         <button class="btn bg-pickup btn-margin">See pickup options</button>
       </div>
     </section>
@@ -61,7 +62,7 @@
 
     <section class="discover bg-discover margin">
       <div class="content content-2 flex-basis">
-        <h1>COMFORT TO THE CORE</h1>
+        <h1 class="h-margin">COMFORT TO THE CORE</h1>
         <p>
           Introducing the new Apple Crisp Macchiato with notes of caramelized
           apples, brown sugar and spiced apple drizzle. Available hot or iced.
@@ -80,7 +81,7 @@
       </div>
     </section>
 
-    <!-- ORDER-NOW-1 ---------------------------------===========-->
+    <!-- ORDER-NOW-1 ------------------===========-->
 
     <section class="bg-order-now margin flex">
       <div class="order-img flex-basis">
@@ -92,7 +93,7 @@
       </div>
 
       <div class="content content-3 flex-basis">
-        <h1>HEARTY ON THE GO</h1>
+        <h1 class="h-margin">HEARTY ON THE GO</h1>
         <p>
           Tackle your mornings with a warm and toasty protein-packed breakfast
           like the Bacon, Gouda & Egg Sandwich or the Double-Smoked Bacon,
@@ -107,17 +108,17 @@
     <!-- ORDER-NOW-2-UBER-------------------- -->
 
     <section class="bg-uber margin flex">
-      <div class="order-img flex-basis">
-        <img class="img-width" src="img/delivery.jpg" alt="" />
-      </div>
-
       <div class="content content-4 flex-basis">
-        <h1>TODAY DESERVES DELIVERY</h1>
+        <h1 class="h-margin">TODAY DESERVES DELIVERY</h1>
         <p>
           For a limited time, enjoy $0 Delivery Fee on Starbucks orders over $20
           on Uber Eats*.
         </p>
         <button class="btn btn-border bg-uber btn-margin">Order now</button>
+      </div>
+
+      <div class="order-img flex-basis">
+        <img class="img-width" src="img/delivery.jpg" alt="" />
       </div>
     </section>
 
@@ -129,8 +130,8 @@
       </div>
 
       <div class="content content-5 flex-basis">
-        <h1>Join us in fighting hunger</h1>
-        <p>
+        <h1 class="style-h1">Join us in fighting hunger</h1>
+        <p class="style-p">
           September is Hunger Action Month™ and we're proud to be a longtime
           partner of Feeding America®. Since 2016, we’ve helped donate nearly 34
           million meals** to fight hunger – and counting.
@@ -161,5 +162,61 @@
         </p>
       </div>
     </section>
+
+    <section class="about">
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Our Company</li>
+          <li>Our Coffee</li>
+          <li>Stories and News</li>
+          <li>Starbucks Archive</li>
+        </ul>
+      </nav>
+
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Our Company</li>
+          <li>Our Coffee</li>
+          <li>Stories and News</li>
+          <li>Starbucks Archive</li>
+        </ul>
+      </nav>
+
+
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Our Company</li>
+          <li>Our Coffee</li>
+          <li>Stories and News</li>
+          <li>Starbucks Archive</li>
+        </ul>
+      </nav>
+
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Our Company</li>
+          <li>Our Coffee</li>
+          <li>Stories and News</li>
+          <li>Starbucks Archive</li>
+        </ul>
+      </nav>  
+    </section>
+
+<div class="border"></div>
+    <footer>
+      <div class="footer">
+        <ul>
+          <li> <a href="#"><i class="fab fa-facebook fa-2x"></i></a> </li>
+          <li> <a href="#"><i class="fab fa-twitter fa-2x "></i></a> </li>
+          <li> <a href="#"><i class="fab fa-pinterest fa-2x"></i></a> </li>
+          <li> <a href="#"></a><i class="fab fa-instagram fa-2x"></i> </li>
+          <li> <a href="#"></a><i class="fab fa-youtube fa-2x"></i> </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
