media query done

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       </div>
     </section>
 
-    <!-- ORDER-NOW-1 ------------------===========-->
+    <!-- ORDER-NOW-1 -------------------->
 
-    <section class="bg-order-now margin flex">
+    <section class="burgers bg-order-now margin flex">
       <div class="order-img flex-basis">
         <img
           class="img-width"
@@ -107,7 +107,7 @@
 
     <!-- ORDER-NOW-2-UBER-------------------- -->
 
-    <section class="bg-uber margin flex">
+    <section class="uber bg-uber margin flex">
       <div class="content content-4 flex-basis">
         <h1 class="h-margin">TODAY DESERVES DELIVERY</h1>
         <p>
@@ -124,7 +124,7 @@
 
     <!-- LEARN-MORE------------------- -->
 
-    <section class="bg-hunger margin flex">
+    <section class=" hunger bg-hunger margin flex">
       <div class="order-img flex-basis">
         <img class="img-width" src="img/donate.jpg" alt="" />
       </div>
